[metadata]
name = chaind
version = 0.2.3
description = Base package for chain queue service
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://gitlab.com/chaintool/chaind
keywords =
	blockchain
	cryptocurrency
	p2p
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet
#	Topic :: Blockchain :: EVM
license = GPL3
licence_files =
	LICENSE

[options]
python_requires = >= 3.7
include_package_data = True
packages = 
	chaind
#	chaind.runnable
	chaind.adapters
	chaind.unittest
	chaind.cli

#[options.entry_points]
#console_scripts =
#	chaind-list = chaind.runnable.list:main
