[metadata]
name = chaind
version = 0.3.2
description = Base package for chain queue service
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://git.defalsify.org/chaind.eth
keywords =
	blockchain
	cryptocurrency
	dlt
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
	Topic :: Internet
#	Topic :: Blockchain :: EVM
license = OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
licence_files =
	LICENSE

[options]
python_requires = >= 3.7
include_package_data = True
packages = 
	chaind
#	chaind.runnable
	chaind.adapters
	chaind.unittest
	chaind.data
	chaind.cli

#[options.entry_points]
#console_scripts =
#	chaind-list = chaind.runnable.list:main
